gui refactor added homes gui